--- a/app/views/assign_projects/index.html.haml
+++ b/app/views/assign_projects/index.html.haml
@@ -1,5 +1,6 @@
 %p#notice= notice
-%h1 Listing Assign Projects
+%h6 Listing Assign Projects
+
 
 = form_for :user do |f|
   = f.hidden_field :status, value: ASSIGNED
@@ -9,16 +10,20 @@
 %table
   %thead
     %tr
+      %th Admin
       %th Users
       %th Projects
       %th{:colspan => "3"}
   %tbody
     - @assign_projects.each do |assign_project|
       %tr
+        %td
+          = assign_project.get_project_admin.email
+          \/
+          = assign_project.project.name
         %td= assign_project.user.email rescue nil
-        %td= assign_project.project.name
-        %td= link_to 'Show', [@project, assign_project]
-        %td= link_to 'Edit', edit_project_assign_project_path(@project, assign_project)
+        / %td= link_to 'Show', [@project, assign_project]
+        / %td= link_to 'Edit', edit_project_assign_project_path(@project, assign_project)
         %td= link_to 'Destroy', [@project, assign_project], method: :delete, data: { confirm: 'Are you sure?' }
 %br/
 = link_to 'New Assign project', [@project, AssignProject.new]
