--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -1,5 +1,5 @@
 %p#notice= notice
-%h1 Listing Projects
+%h6 Listing Projects
 %table
   %thead
     %tr
@@ -11,9 +11,11 @@
       %tr
         %td= project.name
         %td= project.description
-        %td= link_to 'Assign Project', [project, AssignProject]
-        %td= link_to 'Show', project
-        %td= link_to 'Edit', edit_project_path(project)
-        %td= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' }
+        %td= link_to 'Todo', [project, Todo]
+        - if current_user.has_role? :admin
+          %td= link_to 'Assign Project', [project, AssignProject]
+          %td= link_to 'Show', project
+          %td= link_to 'Edit', edit_project_path(project)
+          %td= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' }
 %br/
 = link_to 'New Project', new_project_path
