--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,8 @@
  * file per style scope.
  *
  *= require jquery-ui
+ *= require bootstrap.min
+ *= require bootstrap-theme
  *= require_tree .
  *= require_self
  */
