--- a/app/views/projects/_form.html.haml
+++ b/app/views/projects/_form.html.haml
@@ -1,19 +1,16 @@
-= form_for(@project) do |f|
-  - if @project.errors.any?
-    #error_explanation
-      %h2
-        = pluralize(@project.errors.count, "error")
-        prohibited this project from being saved:
-      %ul
-        - @project.errors.full_messages.each do |message|
-          %li= message
-  .field
-    = f.label :name
-    %br/
-    = f.text_field :name
-  .field
-    = f.label :description
-    %br/
-    = f.text_field :description
-  .actions
-    = f.submit
+
+
+.col-md-12
+  .col-md-4
+  .col-md-4
+    = form_for(@project) do |f|
+      .form-group
+        %label{:for => "usr"} User Name:
+        = f.text_field :name, class: "form-control"
+      .form-group
+        %label{:for => "pwd"} Task:
+        = f.text_area :description, class: "form-control"
+      .form-group
+        = f.submit "Submit", class: "btn btn-default"
+  .col-md-4
+%br/
