--- a/app/views/projects/edit.html.haml
+++ b/app/views/projects/edit.html.haml
@@ -1,5 +1,5 @@
-%h1 Editing Project
+.col-md-4
+.col-md-4
+  %h1 Edit Project
 = render 'form'
-= link_to 'Show', @project
-|
-= link_to 'Back', projects_path
+
