--- a/app/views/todos/_form.html.haml
+++ b/app/views/todos/_form.html.haml
@@ -1,20 +1,19 @@
-= form_for([@project, @todo]) do |f|
-  - if @todo.errors.any?
-    #error_explanation
-      %h2
-        = pluralize(@todo.errors.count, "error")
-        prohibited this todo from being saved:
-      %ul
-        - @todo.errors.full_messages.each do |message|
-          %li= message
-  .field
-    = f.label :Task
-    %br/
-    = f.text_area :description
-  .field
-    = f.label "Assign to User"
-    %br/
-    = f.hidden_field :project_id, value: @project.id
-    = f.autocomplete_field :user_email, autocomplete_user_project_users_path(project_id: @project.id), :update_element => {id: '#some_element'}
-  .actions
-    = f.submit
+.col-md-12
+  .col-md-4
+  .col-md-4
+    %h1 Create Todos
+.col-md-12
+  .col-md-4
+  .col-md-4
+    = form_for([@project, @todo]) do |f|
+      = f.hidden_field :project_id, value: @project.id
+      .form-group
+        %label{:for => "usr"} User Name:
+        = f.autocomplete_field :user_email, autocomplete_user_project_users_path(project_id: @project.id), :update_element => {id: '#some_element'}, class: "form-control"
+      .form-group
+        %label{:for => "pwd"} Task:
+        = f.text_area :description, class: "form-control"
+      .form-group
+        = f.submit "Submit", class: "btn btn-default"
+  .col-md-4
+%br/
