--- a/app/views/assign_projects/_form.html.haml
+++ b/app/views/assign_projects/_form.html.haml
@@ -1,19 +1,8 @@
-= form_for(@assign_project) do |f|
-  - if @assign_project.errors.any?
-    #error_explanation
-      %h2
-        = pluralize(@assign_project.errors.count, "error")
-        prohibited this assign_project from being saved:
-      %ul
-        - @assign_project.errors.full_messages.each do |message|
-          %li= message
-  .field
-    = f.label :users
-    %br/
-    = f.text_field :users
-  .field
-    = f.label :projects
-    %br/
-    = f.text_field :projects
-  .actions
-    = f.submit
+= form_for [@project, @assign_project], remote: true do |f|
+  = f.hidden_field :status, value: ASSIGNED
+  .form-group
+    %label{:for => "usr"} User Name:
+    = f.autocomplete_field :user_id, autocomplete_user_email_users_path, class: "form-control"
+  
+  .form-group
+    = f.submit "Submit", class: "btn btn-default"
