--- a/app/views/todos/index.html.haml
+++ b/app/views/todos/index.html.haml
@@ -1,5 +1,6 @@
 - if current_user.has_role? :admin
-  = render partial: "form"
+  .todos_create
+    = render partial: "form"
 
 .col-md-12
   .container
