--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -72,3 +72,14 @@ div {
 
   
 }
+
+.proj_header{
+  background-color: #154360;
+}
+.proj_header a{
+  color: white;
+}
+.data_container{
+  border: 1px solid #e3e3e3;
+  padding: 1px;
+}
