--- a/app/views/dashboards/index.html.haml
+++ b/app/views/dashboards/index.html.haml
@@ -47,23 +47,25 @@
     - todos_status = Todo.aasm.events.map{|eve| eve.name.to_s} + ["new"]
     - @projects.each do |proj, value|
       - project = Project.find(proj.split('_')[1])
-      %h3= project.name
+      .row.proj_header
+        = link_to project do 
+          %h5= project.name
       %br/
       - c = 0
       - todos_status.each_with_index do |status, index|
         .row
           .col-sm-3
-            .col-sm-12{class: "#{(index == 0 ? 'header_color' : '')}"}
+            .col-sm-12{class: "#{(index == 0 ? 'well well-sm' : '')}"}
               %p= (index == 0 ? 'Status' : '')
             .col-sm-12
-              %p= status
-          .col-sm-9
+              %p= status.titleize
+          .col-sm-9#list_lines
             - (value["status"] - [current_user.email]).each do |user_name|
               - if project.assign_projects.where(status: CREATED).first.user.email != user_name
                 - c +=1
-                .col-sm-3
-                  .col-sm-12{class: (value["status"].length > c ? 'header_color' : '')}
-                    %p= (value["status"].length > c ? user_name : '')
+                .col-sm-3.inr_list_lines.data_container
+                  .col-sm-12{class: (value["status"].length > c ? 'well well-sm' : 'well well-sm')}
+                    %p= user_name #(value["status"].length > c ? user_name : '')
                   .col-sm-12
                     - data = value.except("status")[status]
                     - if data.present? and data[user_name].present?
@@ -74,11 +76,11 @@
                       .col-sm-12
                         %p 
                   - if c%3 == 0
-                    .col-sm-3
+                    .col-sm-3.inr_list_lines
                       .col-sm-12
                         %p 
+                    %br/
               - else
-                %br/
                 
 
 .col-md-12
