--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,7 @@
     %title Assignment
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
     =  javascript_include_tag 'application', 'data-turbolinks-track' => true
+    %script{:src => "https://www.gstatic.com/charts/loader.js", :type => "text/javascript"}
     = csrf_meta_tags
   / .hold-transition.skin-blue.sidebar-mini
   %body
