--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,21 +1,33 @@
-%h2 Sign up
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = devise_error_messages!
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true
-  .field
-    = f.label :password
-    - if @minimum_password_length
-      %em
-        (#{@minimum_password_length} characters minimum)
-    %br/
-    = f.password_field :password, autocomplete: "off"
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "off"
-  .actions
-    = f.submit "Sign up"
-= render "devise/shared/links"
+.row
+  .col-md-4
+  .col-md-4{align: "center"}
+    %h1 Sign up
+  .col-md-4
+
+  .col-md-12
+    .col-md-4
+    .col-md-4
+      = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+        .form-group
+          %label{:for => "usr"} Email:
+          = f.email_field :email, autofocus: true, class: "form-control"
+        .form-group
+          %label{:for => "pwd"} Password:
+          - if @minimum_password_length
+            %em
+              (#{@minimum_password_length} characters minimum)
+          %br/
+          = f.password_field :password, autocomplete: "off", class: "form-control"
+        .form-group
+          %label{:for => "pwd"} Confirm Password:
+          = f.password_field :password_confirmation, autocomplete: "off", class: "form-control"
+        .form-group
+          = f.check_box :remember_me
+          = f.label :remember_me
+        .form-group.row
+          .col-sm-4
+            = f.submit "Sign up", class: "btn btn-default"
+          .col-sm-8
+            = render "devise/shared/links"
+
+  %br/
