--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -6,7 +6,7 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      %a.navbar-brand{:href => "#"} Portfolio
+      %a.navbar-brand{:href => root_path} Promobi Assignment (Project Management)
     #myNavbar.collapse.navbar-collapse
       - if current_user
         %ul.nav.navbar-nav
