--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,11 +2,10 @@
 %html
   %head
     %title Assignment
-    = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
-    =  javascript_include_tag 'application', 'data-turbolinks-track' => true
-    %script{:src => "https://www.gstatic.com/charts/loader.js", :type => "text/javascript"}
+    = stylesheet_link_tag    'application'
+    =  javascript_include_tag 'application'
     = csrf_meta_tags
-  / .hold-transition.skin-blue.sidebar-mini
+    %script{:src => "https://www.gstatic.com/charts/loader.js", :type => "text/javascript"}
   %body
     = render partial: 'layouts/header'
     .col-md-12
@@ -22,3 +21,4 @@
     = yield
 :javascript
   $('.alert').delay(5000).fadeOut('slow');
+  
