--- a/app/views/projects/_pichart.html.haml
+++ b/app/views/projects/_pichart.html.haml
@@ -1,10 +1,9 @@
-
 .abc{id: "piechart_"+@project.id.to_s,:style => "width: 900px; height: 500px;"}              
 - proj_hash = @project.todos.pluck(:status).group_by{|a| a}
 
 :javascript
   $(document).ready(function(){
-    google.charts.load('current', {'packages':['corechart']});
+    google.charts.load("45", {packages:["corechart"]});
     google.charts.setOnLoadCallback(drawChart);
     function drawChart() {
       new_status = "#{proj_hash["new"].present? ? proj_hash["new"].count : 0}"
